[package]
name = "wlitem"
version = "0.1.0"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
edition = "2024"
license = "MIT"
description = "library that provides a model for wishlist items"
homepage = "https://github.com/bryceac/wlitem"
readme= "README.md"
repository = "https://github.com/bryceac/wlitem"
keywords = ["wlitem", "wishlist", "json", "tsv"]

[dependencies]
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
